Feat: Add backend for RRA reporting
