# backend/src/controllers/user.controller.js
@@ -5,13 +5,6 @@ import bcrypt from 'bcryptjs';
 
 const createUser = async (req, res) => {
     try {
-        // const {
-        //     error
-        // } = schema.validate(req.body);
-        // if (error) return res.status(400).json({
-        //     message: error.details[0].message,
-        //     success: false
-        // })
         const oldUser = await User.findOne({
             email: req.body.email
         });
@@ -85,64 +78,6 @@ const getUsers = async (req, res) => {
     });
 }
 
-const vote = async (req, res) => { 
-    try {
-        const user = await User.findOne({
-            _id: req.params.id
-        });
-        if (!user) return res.status(400).json({
-            message: 'User not found',
-            success: false
-        });
-        user.votes = user.votes + 1;
-        console.log(user);
-        const savedUser = await user.save();
-        if (savedUser) return res.status(200).json({
-            success: true,
-            message: 'User voted successfully',
-            data: savedUser
-        })
-    } 
-    catch (err) {
-        return res.status(400).json({
-            message: 'Error occurred',
-            error: err.message
-        })
-    }
-}
-
-const updateUser = async (req, res) => {
-    const filter = {
-        _id: req.params.id
-    }
-    const user = await userExists(req.params.id);
-    if (!user) {
-        return res.status(404).json({
-            message: 'user does not exist',
-            success: false
-        });
-    }
-
-    return await User.findOneAndUpdate(filter, {
-        name: req.body.name,
-        email: req.body.email,
-        gender: req.gender
-    }, {
-        new: true
-    }).then((users) => {
-        res.status(200).json({
-            success: true,
-            message: 'Users updated successfully',
-            data: users
-        })
-    }).catch((err) => {
-        res.status(400).json({
-            message: 'Error editing users',
-            error: err.message
-        })
-    });;
-}
-
 const userExists = async (id) => {
     const user = await User.findById(id);
     if (!userExists) {
@@ -173,35 +108,9 @@ const findById = async (req, res) => {
     })
 }
 
-const deleteUser = async (req, res) => {
-    const filter = {
-        _id: req.params.id
-    }
-    const existingUser = await User.findById(req.params.id);
-    if (!existingUser) {
-        return res.status(404).json({
-            success: false,
-            message: 'User with id not found'
-        });
-    }
-    return await User.findByIdAndDelete(filter).then(() => {
-        res.status(200).json({
-            success: true,
-            message: 'User deleted successfully'
-        })
-    }).catch((err) => {
-        res.status(400).json({
-            message: 'Error deleting user',
-            error: err.message
-        });
-    });
-}
 export {
     createUser,
     getUsers,
-    updateUser,
-    deleteUser,
     findById,
-    login,
-    vote
+    login
 }
