# backend/swagger/swagger.json
@@ -110,53 +110,6 @@
         }
       },
       "/api/v1/users/{id}": {
-        "post": {
-          "tags": [
-            "Users"
-          ],
-          "summary": "",
-          "description": "",
-          "parameters": [
-            {
-              "in": "path",
-              "name": "id",
-              "required": true,
-              "type": "string"
-            },
-            {
-              "in": "body",
-              "name": "body",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          ],
-          "consumes": [
-            "application/json"
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "201": {
-              "description": "Created",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            },
-            "500": {
-              "description": "Internal Server Error"
-            }
-          },
-          "security": [
-            {
-              "Bearer": [
-                "global"
-              ]
-            }
-          ]
-        },
         "get": {
           "tags": [
             "Users"
@@ -198,98 +151,6 @@
                   }
                 }
               }
-            }
-          },
-          "security": [
-            {
-              "Bearer": [
-                "global"
-              ]
-            }
-          ]
-        },
-        "put": {
-          "tags": [
-            "Users"
-          ],
-          "summary": "",
-          "description": "",
-          "parameters": [
-            {
-              "in": "path",
-              "name": "id",
-              "required": true,
-              "type": "string"
-            },
-            {
-              "in": "body",
-              "name": "body",
-              "required": false,
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          ],
-          "consumes": [
-            "application/json"
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "201": {
-              "description": "Created",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            },
-            "500": {
-              "description": "Internal Server Error"
-            }
-          },
-          "security": [
-            {
-              "Bearer": [
-                "global"
-              ]
-            }
-          ]
-        },
-        "delete": {
-          "tags": [
-            "Users"
-          ],
-          "summary": "",
-          "description": "",
-          "parameters": [
-            {
-              "in": "path",
-              "name": "id",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "consumes": [
-            "application/json"
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "deleted": {
-                    "type": "boolean",
-                    "example": true
-                  }
-                }
-              }
-            },
-            "500": {
-              "description": "Internal Server Error"
             }
           },
           "security": [
@@ -344,10 +205,10 @@
           ]
         }
       },
-      "/api/v1/meters": {
+      "/api/v1/vehicles": {
         "post": {
           "tags": [
-            "Meters"
+            "Vehicle"
           ],
           "summary": "",
           "description": "",
@@ -357,7 +218,7 @@
               "name": "body",
               "required": true,
               "schema": {
-                "$ref": "#/definitions/Token"
+                "$ref": "#/definitions/Vehicle"
               }
             }
           ],
@@ -371,50 +232,7 @@
             "201": {
               "description": "Created",
               "schema": {
-                "$ref": "#/definitions/Token"
-              }
-            },
-            "500": {
-              "description": "Internal Server Error"
-            }
-          },
-          "security": [
-            {
-              "Bearer": [
-                "global"
-              ]
-            }
-          ]
-        }
-      },
-      "/api/v1/candidates": {
-        "post": {
-          "tags": [
-            "Candidates"
-          ],
-          "summary": "",
-          "description": "",
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/Candidate"
-              }
-            }
-          ],
-          "consumes": [
-            "application/json"
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "201": {
-              "description": "Created",
-              "schema": {
-                "$ref": "#/definitions/Candidate"
+                "$ref": "#/definitions/Vehicle"
               }
             },
             "500": {
@@ -431,7 +249,7 @@
         },
         "get": {
           "tags": [
-            "Candidates"
+            "Vehicle"
           ],
           "summary": "",
           "description": "",
@@ -448,7 +266,7 @@
               "schema": {
                 "type": "array",
                 "items": {
-                  "$ref": "#/definitions/Candidate"
+                  "$ref": "#/definitions/Vehicle"
                 }
               }
             },
@@ -474,10 +292,10 @@
           ]
         }
       },
-      "/api/v1/candidates/{id}": {
+      "/api/v1/vehicles/{id}": {
         "get": {
           "tags": [
-            "Candidates"
+            "Vehicle"
           ],
           "summary": "",
           "description": "",
@@ -501,7 +319,7 @@
               "schema": {
                 "type": "array",
                 "items": {
-                  "$ref": "#/definitions/Candidate"
+                  "$ref": "#/definitions/Vehicle"
                 }
               }
             },
@@ -525,115 +343,16 @@
               ]
             }
           ]
-        },
-        "put": {
-          "tags": [
-            "Candidates"
-          ],
-          "summary": "",
-          "description": "",
-          "parameters": [
-            {
-              "in": "path",
-              "name": "id",
-              "required": true,
-              "type": "string"
-            },
-            {
-              "in": "body",
-              "name": "body",
-              "required": false,
-              "schema": {
-                "$ref": "#/definitions/Candidate"
-              }
-            }
-          ],
-          "consumes": [
-            "application/json"
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "201": {
-              "description": "Created",
-              "schema": {
-                "$ref": "#/definitions/Candidate"
-              }
-            },
-            "500": {
-              "description": "Internal Server Error"
-            }
-          },
-          "security": [
-            {
-              "Bearer": [
-                "global"
-              ]
-            }
-          ]
-        },
-        "delete": {
-          "tags": [
-            "Candidates"
-          ],
-          "summary": "",
-          "description": "",
-          "parameters": [
-            {
-              "in": "path",
-              "name": "id",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "consumes": [
-            "application/json"
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "deleted": {
-                    "type": "boolean",
-                    "example": true
-                  }
-                }
-              }
-            },
-            "500": {
-              "description": "Internal Server Error"
-            }
-          },
-          "security": [
-            {
-              "Bearer": [
-                "global"
-              ]
-            }
-          ]
         }
       },
-      "/api/v1/candidates/vote/{id}": {
+      "/api/v1/vehicles/vehicle-owners": {
         "get": {
           "tags": [
-            "Candidates"
+            "Vehicle"
           ],
           "summary": "",
           "description": "",
-          "parameters": [
-            {
-              "in": "path",
-              "name": "id",
-              "required": true,
-              "type": "string"
-            }
-          ],
+          "parameters": [],
           "consumes": [
             "application/json"
           ],
@@ -646,7 +365,7 @@
               "schema": {
                 "type": "array",
                 "items": {
-                  "$ref": "#/definitions/Candidate"
+                  "$ref": "#/definitions/Vehicle"
                 }
               }
             },
@@ -672,63 +391,11 @@
           ]
         }
       },
-      "/api/v1/candidates/party/{id}": {
-        "get": {
-          "tags": [
-            "Candidates"
-          ],
-          "summary": "",
-          "description": "",
-          "parameters": [
-            {
-              "in": "path",
-              "name": "id",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "consumes": [
-            "application/json"
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/definitions/Candidate"
-                }
-              }
-            },
-            "500": {
-              "description": "Internal Server Error",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "error": {
-                    "type": "string",
-                    "example": "Internal Server Error"
-                  }
-                }
-              }
-            }
-          },
-          "security": [
-            {
-              "Bearer": [
-                "global"
-              ]
-            }
-          ]
-        }
-      },
-      "/api/v1/votes": {
+      "/api/v1/car-owners": {
         "post": {
           "tags": [
-            "Votes"
+            "Car",
+            "Owner"
           ],
           "summary": "",
           "description": "",
@@ -738,7 +405,7 @@
               "name": "body",
               "required": true,
               "schema": {
-                "$ref": "#/definitions/VotedUser"
+                "$ref": "#/definitions/CarOwner"
               }
             }
           ],
@@ -752,11 +419,110 @@
             "201": {
               "description": "Created",
               "schema": {
-                "$ref": "#/definitions/VotedUser"
+                "$ref": "#/definitions/CarOwner"
               }
             },
             "500": {
               "description": "Internal Server Error"
+            }
+          },
+          "security": [
+            {
+              "Bearer": [
+                "global"
+              ]
+            }
+          ]
+        },
+        "get": {
+          "tags": [
+            "Car",
+            "Owner"
+          ],
+          "summary": "",
+          "description": "",
+          "parameters": [],
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/CarOwner"
+                }
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "error": {
+                    "type": "string",
+                    "example": "Internal Server Error"
+                  }
+                }
+              }
+            }
+          },
+          "security": [
+            {
+              "Bearer": [
+                "global"
+              ]
+            }
+          ]
+        }
+      },
+      "/api/v1/car-owners/{id}": {
+        "get": {
+          "tags": [
+            "Car",
+            "Owner"
+          ],
+          "summary": "",
+          "description": "",
+          "parameters": [
+            {
+              "in": "path",
+              "name": "id",
+              "required": true,
+              "type": "string"
+            }
+          ],
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/CarOwner"
+                }
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "error": {
+                    "type": "string",
+                    "example": "Internal Server Error"
+                  }
+                }
+              }
             }
           },
           "security": [
@@ -809,7 +575,7 @@
           }
         }
       },
-      "Token": {
+      "Vehicle": {
         "type": "object",
         "properties": {
           "id": {
@@ -817,21 +583,34 @@
             "example": "507f1f77bcf86cd799439011",
             "required": true
           },
-          "token": {
+          "chasisNumber": {
             "type": "number",
             "example": 0
           },
-          "lastActiveDate": {
-            "type": "number",
-            "example": 0
-          },
-          "status": {
+          "manufactureCompany": {
             "type": "string",
             "example": "string"
           },
-          "meterNumber": {
+          "manufactureYear": {
             "type": "number",
             "example": 0
+          },
+          "price": {
+            "type": "string",
+            "example": "string"
+          },
+          "vehiclePlateNumber": {
+            "type": "number",
+            "example": 0
+          },
+          "modelName": {
+            "type": "string",
+            "example": "string"
+          },
+          "owner": {
+            "type": "string",
+            "example": "507f1f77bcf86cd799439011",
+            "required": true
           },
           "_id": {
             "type": "string",
@@ -844,7 +623,7 @@
           }
         }
       },
-      "Meter": {
+      "CarOwner": {
         "type": "object",
         "properties": {
           "id": {
@@ -852,9 +631,24 @@
             "example": "507f1f77bcf86cd799439011",
             "required": true
           },
-          "meterNumber": {
+          "ownerNames": {
+            "type": "string",
+            "example": "string"
+          },
+          "ownerNationalId": {
+            "type": "string",
+            "example": "string"
+          },
+          "ownerPhoneNumber": {
             "type": "number",
             "example": 0
+          },
+          "ownerAddress": {
+            "type": "string",
+            "example": "string"
+          },
+          "vehicles": {
+            "type": "array"
           },
           "_id": {
             "type": "string",
@@ -864,72 +658,6 @@
           "__v": {
             "type": "number",
             "example": 0
-          }
-        }
-      },
-      "Candidate": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string",
-            "example": "507f1f77bcf86cd799439011",
-            "required": true
-          },
-          "candidateName": {
-            "type": "string",
-            "example": "string"
-          },
-          "partyName": {
-            "type": "string",
-            "example": "string"
-          },
-          "profileUrl": {
-            "type": "string",
-            "example": "string"
-          },
-          "votes": {
-            "type": "number",
-            "example": 0
-          },
-          "postTitle": {
-            "type": "string",
-            "example": "string"
-          },
-          "postDescription": {
-            "type": "string",
-            "example": "string"
-          },
-          "_id": {
-            "type": "string",
-            "example": "507f1f77bcf86cd799439011",
-            "required": true
-          },
-          "__v": {
-            "type": "number",
-            "example": 0
-          }
-        }
-      },
-      "VotedUser": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string",
-            "example": "507f1f77bcf86cd799439011",
-            "required": true
-          },
-          "votedUser": {
-            "type": "string",
-            "example": "string"
-          },
-          "candidate": {
-            "type": "string",
-            "example": "string"
-          },
-          "_id": {
-            "type": "string",
-            "example": "507f1f77bcf86cd799439011",
-            "required": true
           }
         }
       }
